--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,8 @@ a{
 /* media query styling */
 @media (max-width: 768px){
 
+
+
     .img-1{
         height: 300px !important;
     }
@@ -79,6 +81,11 @@ a{
         padding: 10px !important;
         width: 100% !important;
         height: 300px !important;
+    }
+
+    .chaplain{
+        display: block !important;
+        margin: 0;
     }
 
 
